<?xml version="1.0" encoding="utf-8"?>
<resources>

    <item name="green" type="color">#FF99CC00</item>
    <item name="orange" type="color">#FFFFBB33</item>
    <item name="darkorange" type="color">#FFFF8800</item>
    <item name="red" type="color">#FFFF4444</item>
    <item name="darkred" type="color">#FFCC0000</item>

    <string name="app_name">Earthquake Monitor</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_screen">DetailScreen</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="magnitude_label_text">Magnitude:</string>
    <string name="date_label_text">Date:</string>
    <string name="time_label_text">Time:</string>
    <string name="Location_label_text">Location:</string>
    <string name="depht_label_text">Depth:</string>

</resources>
