<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.damian.earthquakemonitor.DetailText">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/magnitude_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnitude_label_text"/>

            <TextView
                android:id="@+id/magnitude_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/magnitude_label_text"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label_text"/>

            <TextView
                android:id="@+id/date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_label_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label_text"/>

            <TextView
                android:id="@+id/time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_label_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location_label_text"/>

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Location_label_text"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/depth_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depht_label_text"/>

            <TextView
                android:id="@+id/depth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/depht_label_text"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
